--- a/.github/workflows /Déploiement_InfinityFree_via_FTP.yml
+++ b/.github/workflows /Déploiement_InfinityFree_via_FTP.yml
@@ -1,34 +1,45 @@
-# --- Déploiement InfinityFree -----------
-- name: Prepare backend files
-  if: github.event_name == 'push'
-  run: |
-    mkdir -p deploy-htdocs
-    rsync -av --progress ./ deploy-htdocs/ \
-      --exclude=vendor/ \
-      --exclude=node_modules/ \
-      --exclude=.env \
-      --exclude=storage/logs/ \
-      --exclude=.gitignore \
-      --exclude=storage/framework/ \
-      --exclude=public/storage
+name: Deploy Laravel to InfinityFree
 
-    # Créer les dossiers nécessaires avec permissions
-    mkdir -p deploy-htdocs/storage/{logs,framework/{cache,sessions,views},app/public}
-    mkdir -p deploy-htdocs/bootstrap/cache
-    touch deploy-htdocs/storage/logs/laravel.log
-    chmod -R 755 deploy-htdocs/storage deploy-htdocs/bootstrap/cache
+on:
+  push:
+    branches:
+      - main  # branche de déploiement
 
-- name: Upload to InfinityFree via FTP
-  if: github.event_name == 'push'
-  uses: SamKirkland/FTP-Deploy-Action@v4.3.0
-  with:
-    server: ${{ secrets.INFINITYFREE_HOST }} 
-    username: ${{ secrets.INFINITYFREE_USERNAME }}
-    password: ${{ secrets.INFINITYFREE_PASSWORD }}
-    local-dir: ./deploy-htdocs/
-    server-dir: /htdocs/
-    exclude: |
-      .env
-      .gitignore
-    security: strict
-    dry-run: false
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Prepare backend files
+        run: |
+          mkdir -p deploy-htdocs
+          rsync -av --progress ./ deploy-htdocs/ \
+            --exclude=vendor/ \
+            --exclude=node_modules/ \
+            --exclude=.env \
+            --exclude=storage/logs/ \
+            --exclude=.gitignore \
+            --exclude=storage/framework/ \
+            --exclude=public/storage
+
+          mkdir -p deploy-htdocs/storage/{logs,framework/{cache,sessions,views},app/public}
+          mkdir -p deploy-htdocs/bootstrap/cache
+          touch deploy-htdocs/storage/logs/laravel.log
+          chmod -R 755 deploy-htdocs/storage deploy-htdocs/bootstrap/cache
+
+      - name: Upload to InfinityFree via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
+        with:
+          server: ${{ secrets.INFINITYFREE_HOST }} # ex: ftpupload.net
+          username: ${{ secrets.INFINITYFREE_USERNAME }}
+          password: ${{ secrets.INFINITYFREE_PASSWORD }}
+          local-dir: ./deploy-htdocs/
+          server-dir: /htdocs/
+          exclude: |
+            .env
+            .gitignore
+          security: loose
+          dry-run: false
