--- a/.github/workflows /Déploiement_InfinityFree_via_FTP.yml
+++ b/.github/workflows /Déploiement_InfinityFree_via_FTP.yml
@@ -3,7 +3,7 @@ name: Deploy Laravel to InfinityFree
 on:
   push:
     branches:
-      - main  # branche de déploiement
+      - main  # branche de déploiement..
 
 jobs:
   deploy:
